# freeminer

./: .clang-format  .dockerignore  .gitignore  .gitmodules  .luacheckrc  .travis.yml  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  Dockerfile  LICENSE.txt  README.md  README.txt  TODO.md  cmake-variants.yaml  freeminer.conf.example  minetest.conf.example  shell.nix  vcpkg.json
irr/src/: AnimatedMeshSceneNode.cpp  BuiltInFont.h  CAnimatedMeshSceneNode.cpp  CAnimatedMeshSceneNode.h  CB3DMeshFileLoader.cpp  CB3DMeshFileLoader.h  CBillboardSceneNode.cpp  CBillboardSceneNode.h  CBlit.h  CCameraSceneNode.cpp  CCameraSceneNode.h  CColorConverter.cpp  CColorConverter.h  CDummyTransformationSceneNode.cpp  CDummyTransformationSceneNode.h  CEGLManager.cpp  CEGLManager.h  CEmptySceneNode.cpp  CEmptySceneNode.h  CFPSCounter.cpp  CFPSCounter.h  CFileList.cpp  CFileList.h  CFileSystem.cpp  CFileSystem.h  CGLTFMeshFileLoader.cpp  CGLTFMeshFileLoader.h  CGLXManager.cpp  CGLXManager.h  CGUIButton.cpp  CGUIButton.h  CGUICheckBox.cpp  CGUICheckBox.h  CGUIComboBox.cpp  CGUIComboBox.h  CGUIEditBox.cpp  CGUIEditBox.h  CGUIEnvironment.cpp  CGUIEnvironment.h  CGUIFileOpenDialog.cpp  (+103 more)
src/: CMakeLists.txt  FMColoredString.cpp  FMColoredString.h  FMStaticText.cpp  FMStaticText.h  activeobject.h  activeobjectmgr.h  android.h  ban.cpp  ban.h  base64.cpp  biome.cpp  biome.h  camera.cpp  camera.h  cavegen.cpp  cavegen.h  chat.cpp  chat.h  chatmessage.h  circuit.cpp  circuit.h  circuit_element.cpp  circuit_element.h  circuit_element_list.h  circuit_element_states.cpp  circuit_element_states.h  circuit_element_virtual.cpp  circuit_element_virtual.h  client.cpp  client.h  client_process.cpp  client_process.h  clientiface.cpp  clientiface.h  clientmap.cpp  clientmap.h  clientmedia.cpp  clientmedia.h  clientobject.cpp  (+339 more)
src/benchmark/: CMakeLists.txt  benchmark.cpp  benchmark.h  benchmark_activeobjectmgr.cpp  benchmark_connection.cpp  benchmark_database.cpp  benchmark_lighting.cpp  benchmark_map.cpp  benchmark_mapblock.cpp  benchmark_mapmodify.cpp  fm_benchmark.cpp  fm_benchmark.h
src/cguittfont/: CGUITTFont.cpp  irrUString.h
src/client/: CMakeLists.txt  activeobjectmgr.cpp  activeobjectmgr.h  camera.cpp  camera.h  client.cpp  client.h  clientenvironment.cpp  clientenvironment.h  clientevent.h  clientlauncher.cpp  clientlauncher.h  clientmap.cpp  clientmap.h  clientmedia.cpp  clientmedia.h  clientobject.cpp  clientobject.h  clientsimpleobject.h  clouds.cpp  clouds.h  content_cao.cpp  content_cao.h  content_cso.cpp  content_cso.h  content_mapblock.cpp  content_mapblock.h  event_manager.h  filecache.cpp  filecache.h  fm_client.cpp  fm_client_mcp.cpp  fm_clientmap.cpp  fm_far_calc.cpp  fm_far_calc.h  fm_far_container.cpp  fm_far_container.h  fm_farmesh.cpp  fm_farmesh.h  fontengine.cpp  (+61 more)
src/content/: CMakeLists.txt  content.cpp  mod_configuration.cpp  mod_configuration.h  mods.cpp  mods.h  subgames.cpp  subgames.h
src/contrib/: CMakeLists.txt  environment.cpp  fallingsao.cpp  fallingsao.h  fm_l_env.cpp  itemsao.cpp  itemsao.h  l_env.cpp
src/database/: CMakeLists.txt  database-dummy.cpp  database-dummy.h  database-files.cpp  database-leveldb.cpp  database-leveldb.h  database-postgresql.cpp  database-postgresql.h  database-redis.cpp  database-redis.h  database-sqlite3.cpp  database-sqlite3.h  database.cpp  database.h
src/debug/: CMakeLists.txt  demangle.cpp  dump.h  getThreadId.cpp  iostream_debug_helpers.h  magic_enum.hpp  stacktrace.cpp  stacktrace.h
src/enet/: CMakeLists.txt  Makefile.in  configure  enet.lib  enet64.lib
src/gui/: CMakeLists.txt  StyleSpec.h  drawItemStack.cpp  guiAnimatedImage.cpp  guiAnimatedImage.h  guiBackgroundImage.h  guiBox.cpp  guiBox.h  guiButton.cpp  guiButton.h  guiButtonImage.cpp  guiButtonImage.h  guiButtonItemImage.cpp  guiButtonItemImage.h  guiButtonKey.cpp  guiButtonKey.h  guiChatConsole.cpp  guiChatConsole.h  guiEditBox.cpp  guiEditBox.h  guiEditBoxWithScrollbar.cpp  guiEditBoxWithScrollbar.h  guiEngine.cpp  guiEngine.h  guiFormSpecMenu.cpp  guiFormSpecMenu.h  guiHyperText.cpp  guiHyperText.h  guiInventoryList.cpp  guiInventoryList.h  guiItemImage.h  guiKeyChangeMenu.cpp  guiKeyChangeMenu.h  guiMainMenu.h  guiOpenURL.cpp  guiPasswordChange.cpp  guiPasswordChange.h  guiPathSelectMenu.cpp  guiPathSelectMenu.h  guiScene.cpp  (+22 more)
src/irrlicht_changes/: CGUITTFont.cpp  CGUITTFont.h  CMakeLists.txt  printing.h  static_text.cpp  static_text.h
src/json/: CMakeLists.txt  UPDATING  jsoncpp.cpp
src/jthread/: CMakeLists.txt  jevent.h  jmutex.h  jmutexautolock.h  jsemaphore.h  jthread.h
src/lua/: CMakeLists.txt
src/mandelbulber/: common_math.h  fractal.cpp  fractal.h  fractparams.h
src/mapgen/: CMakeLists.txt  README_terraindiffusion.md  cavegen.cpp  cavegen.h  dungeongen.cpp  dungeongen.h  mapgen.cpp  mapgen.h  mapgen_carpathian.cpp  mapgen_carpathian.h  mapgen_earth.cpp  mapgen_earth.h  mapgen_erosion.cpp  mapgen_erosion.h  mapgen_flat.cpp  mapgen_flat.h  mapgen_fractal.cpp  mapgen_fractal.h  mapgen_indev.cpp  mapgen_indev.h  mapgen_math.cpp  mapgen_math.h  mapgen_singlenode.cpp  mapgen_singlenode.h  mapgen_terraindiffusion.cpp  mapgen_terraindiffusion.h  mapgen_terraindiffusion_native.cpp  mapgen_terraindiffusion_native.h  mapgen_v5.cpp  mapgen_v5.h  mapgen_v6.cpp  mapgen_v6.h  mapgen_v7.cpp  mapgen_v7.h  mapgen_valleys.cpp  mapgen_valleys.h  mapgen_voxel_earth.cpp  mapgen_voxel_earth.h  mg_biome.cpp  mg_biome.h  (+8 more)
src/network/: CMakeLists.txt  address.cpp  address.h  clientopcodes.cpp  clientpackethandler.cpp  connection.cpp  connection.h  connection_internal.h  connectionthreads.cpp  connectionthreads.h  fm_clientpackethandler.cpp  fm_clientpacketsender.cpp  fm_connection.cpp  fm_connection.h  fm_connection_enet.cpp  fm_connection_enet.h  fm_connection_multi.cpp  fm_connection_multi.h  fm_connection_sctp.cpp  fm_connection_sctp.h  fm_connection_use.h  fm_connection_websocket_sctp.cpp  fm_connection_websocket_sctp.h  fm_lan.cpp  fm_lan.h  fm_networkprotocol.h  fm_serverpackethandler.cpp  fm_serverpacketsender.cpp  networkpacket.cpp  networkpacket.h  networkprotocol.cpp  (+8 more)
(+1174 files in other folders)
